# akiradb.py

./: .flake8  .gitignore  .gitmodules  pyproject.toml
.github/workflows/: ci.yml
examples/: model.py
src/akiradb/: __init__.py  database_connection.py  exceptions.py
src/akiradb/exceptions/: not_connected_exception.py
src/akiradb/model/: __init__.py  base_model.py  conditions.py  proxies.py  relations.py  utils.py
src/akiradb/types/: dumpers.py  loaders.py  query.py
src/akiradb/typing/: relationship.py
