[tool.poetry]
name = "akiradb"
version = "0.0.1"
description = "A framework for Cypher instructions over PostGres Wire protocol. Supports ArcadeDB."
authors = ["Pierre Jeanjean <rhiobet@gmail.com>"]
license = "MIT"
packages = [
    {include = "src/akiradb"},
    {include = "src/akiradb/py.typed"}
]

[tool.poetry.dependencies]
python = "^3.10"
psycopg = { path = "./psycopg/psycopg" }
psycopg_c = { path = "./psycopg/psycopg_c" }
psycopg_pool = { path = "./psycopg/psycopg_pool" }

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-bugbear = "^22.7.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
balanced_wrapping = true
line_length = 99
