[tool.poetry]
name = "akiradb"
version = "0.0.1"
description = "A framework for Cypher instructions over PostGres Wire protocol. Supports ArcadeDB."
authors = ["Pierre Jeanjean <rhiobet@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
psycopg = { git = "https://github.com/psycopg/psycopg.git", rev = "47019949990c5ea2007096a84d844722796212c8", subdirectory = "psycopg" }
psycopg_c = { git = "https://github.com/psycopg/psycopg.git", rev = "47019949990c5ea2007096a84d844722796212c8", subdirectory = "psycopg_c" }
psycopg_pool = { git = "https://github.com/psycopg/psycopg.git", rev = "47019949990c5ea2007096a84d844722796212c8", subdirectory = "psycopg_pool" }

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-bugbear = "^22.7.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
balanced_wrapping = true
line_length = 99
