[tool.poetry]
name = "akiradb"
version = "0.0.1"
description = "A framework for Cypher instructions over PostGres Wire protocol. Supports ArcadeDB."
authors = ["Pierre Jeanjean <rhiobet@gmail.com>"]
license = "MIT"
packages = [
    { include = "akiradb", from = "src/" },
    { include = "py.typed", from = "src/akiradb/" },
]

[tool.poetry.dependencies]
python = "^3.10"
psycopg = { version = "^3.1", extras = ["binary", "pool"] }

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-bugbear = "^22.7.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
balanced_wrapping = true
line_length = 99
